--- a/css/styles.css
+++ b/css/styles.css
@@ -43,3 +43,77 @@ body {
 .pokemon-list {
   list-style: none;
 }
+
+#modal-container {
+  position: fixed;
+  padding: 20px;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+
+  /* to show it above other content */
+  z-index: 999;
+
+  /* to allow scrolling if the screen is not high enough*/
+  overflow: auto;
+
+  /* this is used to center the modal */
+  display: grid;
+  text-align: center;
+}
+
+.modal {
+  margin: auto;
+  display: inline-block;
+  box-sizing: border-box;
+  background: #fff;
+  padding: 15px;
+  width: 100%;
+  max-width: 500px;
+  text-align: center;
+  background-color: #ffad00;
+  color: black;
+}
+
+.modal-close {
+  float: right;
+  -webkit-appearance: none;
+  border: 0;
+  background: none;
+  color: red;
+  text-decoration: underline;
+  font-size: medium;
+  border: #1560bd solid 3px;
+}
+
+.modal h1 {
+  margin-top: 0;
+}
+
+.modal p {
+  margin-bottom: 0;
+}
+
+#modal-container {
+  display: none;
+}
+
+#modal-container.is-visible {
+  /* CSS for modal container - add your own desired CSS styles here */
+  display: block;
+}
+
+.pokemon-image {
+  width: 170px;
+}
+
+.pokemon-name {
+  text-transform: lowercase;
+}
+
+.pokemon-name::first-letter {
+  text-transform: capitalize;
+}
