--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ body {
 
 .pokemonlist-button {
   border-radius: 10px;
-  width: 200px;
+  width: 400px;
   height: 60px;
   font-size: 1.1em;
   cursor: pointer;
@@ -86,7 +86,8 @@ body {
   color: red;
   text-decoration: underline;
   font-size: medium;
-  border: #1560bd solid 3px;
+  border: black solid 3px;
+  font-weight: bold;
 }
 
 .modal h1 {
