--- a/css/styles.css
+++ b/css/styles.css
@@ -118,3 +118,23 @@ body {
 .pokemon-name::first-letter {
   text-transform: capitalize;
 }
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  left: 10px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #ffde00;
+  color: black;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 50px;
+}
+
+#myBtn:hover {
+  background-color: #555;
+}
