--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,10 @@ body {
 }
 
 .pokemon_logo {
-  width: 378px;
+  width: 350px;
+  position: absolute;
+  left: 40%;
+  bottom: 10%;
 }
 
 .page_header {
@@ -44,81 +47,6 @@ body {
   list-style: none;
 }
 
-#modal-container {
-  position: fixed;
-  padding: 20px;
-  box-sizing: border-box;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-
-  /* to show it above other content */
-  z-index: 999;
-
-  /* to allow scrolling if the screen is not high enough*/
-  overflow: auto;
-
-  /* this is used to center the modal */
-  display: grid;
-  text-align: center;
-}
-
-.modal {
-  margin: auto;
-  display: inline-block;
-  box-sizing: border-box;
-  background: #fff;
-  padding: 15px;
-  width: 100%;
-  max-width: 500px;
-  text-align: center;
-  background-color: #ffad00;
-  color: black;
-}
-
-.modal-close {
-  float: right;
-  -webkit-appearance: none;
-  border: 0;
-  background: none;
-  color: red;
-  text-decoration: underline;
-  font-size: medium;
-  border: black solid 3px;
-  font-weight: bold;
-}
-
-.modal h1 {
-  margin-top: 0;
-}
-
-.modal p {
-  margin-bottom: 0;
-}
-
-#modal-container {
-  display: none;
-}
-
-#modal-container.is-visible {
-  /* CSS for modal container - add your own desired CSS styles here */
-  display: block;
-}
-
-.pokemon-image {
-  width: 170px;
-}
-
-.pokemon-name {
-  text-transform: lowercase;
-}
-
-.pokemon-name::first-letter {
-  text-transform: capitalize;
-}
-
 #myBtn {
   display: none;
   position: fixed;
@@ -137,4 +65,84 @@ body {
 
 #myBtn:hover {
   background-color: #555;
+}
+
+.modal-header {
+  background-color: #cc0000;
+  text-align: center;
+}
+
+.modal-title {
+  color: pink;
+}
+
+.header {
+  text-align: center;
+}
+
+.modal-body {
+  color: pink;
+  background-color: #3b4cca;
+}
+
+.modal-footer {
+  background-color: #ffde00;
+}
+
+.my-navbar {
+  top: 0;
+  width: 100%;
+  height: 250px;
+  margin-bottom: 10px;
+}
+
+.search-box {
+  position: absolute;
+  top: 50%;
+  left: 80%;
+  transform: translate(-50%, -50%);
+  background: #2f3640;
+  height: 40px;
+  border-radius: 40px;
+  padding: 10px;
+  margin: 0;
+  padding: 0;
+}
+
+.search-btn {
+  color: #e84118;
+  float: right;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: yellow;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+.search-txt {
+  border: none;
+  background: none;
+  outline: none;
+  float: left;
+  padding: 0;
+  color: white;
+  font-size: 16px;
+  transition: 0.4s;
+  line-height: 40px;
+  width: 0px;
+  margin: 0;
+  padding: 0;
+}
+
+.search-box:hover > .search-txt {
+  width: 240px;
+  padding: 0 6px;
+}
+
+.search-box:hover > .search-btn {
+  background: white;
 }
