--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,8 @@ body {
 
 .pokemon_logo {
   width: 350px;
-  left: 40%;
-  bottom: 10%;
+  left: 60%;
+  bottom: 20%;
 }
 
 .page_header {
@@ -96,10 +96,10 @@ body {
 
 .search-box {
   position: absolute;
-  top: 50%;
-  left: 80%;
+  top: 80%;
+  left: 50%;
   transform: translate(-50%, -50%);
-  background: #2f3640;
+  background: lightblue;
   height: 40px;
   border-radius: 40px;
   padding: 10px;
@@ -113,7 +113,7 @@ body {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background: yellow;
+  background: gold;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -127,7 +127,7 @@ body {
   outline: none;
   float: left;
   padding: 0;
-  color: white;
+  color: black;
   font-size: 16px;
   transition: 0.4s;
   line-height: 40px;
@@ -142,9 +142,5 @@ body {
 }
 
 .search-box:hover > .search-btn {
-  background: white;
-}
-
-.list-wrapper {
-  margin-top: 220px;
+  background: darkblue;
 }
